# llm-internal-medicine

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/skills/monitor-hook-perf-rules/: SKILL.md
.claude/skills/pre-commit-checklist/: SKILL.md
docs/: brief.md  internal_medicine_architecture.excalidraw  massive_activation.md  moe_health_metrics.excalidraw  ple_health.md  presentation.md  qk_logits.md  qk_stats_metrics.excalidraw
src/internal_medicine/: __init__.py
src/internal_medicine/backends/: __init__.py
src/internal_medicine/backends/megatron/: __init__.py  base.py  gather.py  massive_activation_metrics.py  massive_activation_monitor.py  moe_metrics.py  moe_monitor.py  ple_metrics.py  ple_monitor.py  qk_monitor.py  sink_head_metrics.py  triton_kernels.py
src/internal_medicine/backends/paddlefleet/: __init__.py  base.py  gather.py  layer_discovery.py  massive_activation_metrics.py  massive_activation_monitor.py  moe_monitor.py  qk_monitor.py
src/internal_medicine/core/: __init__.py  base_monitor.py  registry.py  training_logs.py  triton_qk_kernel.py
tests/: _backend_env.py  test_core_monitoring.py  test_megatron_monitors.py  test_paddlefleet_monitors.py
