[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-internal-medicine"
version = "0.1.0"
description = "Model health monitoring for large-scale training (Megatron + PaddleFleet)"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
megatron = ["torch"]
paddlefleet = ["paddlepaddle-gpu"]
dev = [
    "ruff>=0.15.12",
    "pre-commit>=4.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["internal_medicine"]
